# service-reliability-app

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  services.yaml
backend/alembic/: env.py
backend/alembic/versions/: f34e1be4f316_initial.py
backend/app/: main.py
backend/app/checker/: scheduler.py
backend/app/core/: config.py  security.py
backend/app/models/: health_check.py  service.py  user.py
backend/app/routers/: auth.py  health_checks.py  services.py
backend/app/schemas/: auth.py  health_check.py  service.py
backend/tests/: conftest.py  test_services.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: index.ts
frontend/src/components/: AiSummary.tsx  Dashboard.tsx  LoginPage.tsx  ProtectedRoute.tsx  ServiceDetail.tsx  ServiceFormModal.tsx  ServiceList.tsx  SummaryCards.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: utils.ts
frontend/src/test/: AiSummary.test.tsx  LoginPage.test.tsx  ServiceList.test.tsx  SummaryCards.test.tsx
frontend/src/types/: index.ts
